// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EquipmentCreatePage displays alert if submit fails 1`] = `
<div>
  <Alert
    liveRegionPoliteness="assertive"
    margin="x-small 0"
    open={true}
    screenReaderOnly={false}
    timeout={0}
    transition="fade"
    variant="error"
  >
    some error
  </Alert>
  <Heading
    border="none"
    color="inherit"
    ellipsis={false}
    level="h1"
    margin="medium"
  >
    Add Equipment
  </Heading>
  <FormTextInput
    identifier="serialNumber"
    label="Serial Number"
    onChange={[Function]}
    required={true}
    value=""
  />
  <FormSelect
    defaultOptionLabel="Select an OEM"
    disabled={false}
    identifier="oemId"
    label="OEM"
    onChange={[Function]}
    options={
      Array [
        Object {
          "id": 1,
          "name": "OEM 1",
        },
        Object {
          "id": 2,
          "name": "OEM 2",
        },
        Object {
          "id": 3,
          "name": "OEM 3",
        },
      ]
    }
    required={true}
    value={null}
  />
  <FormSelect
    defaultOptionLabel="Select a Model"
    disabled={true}
    identifier="modelId"
    label="Model"
    onChange={[Function]}
    options={Array []}
    required={true}
    value={null}
  />
  <FormSelect
    defaultOptionLabel="Select a Type"
    disabled={false}
    identifier="typeId"
    label="Type"
    onChange={[Function]}
    options={
      Array [
        Object {
          "id": 7,
          "name": "Type 1",
        },
        Object {
          "id": 8,
          "name": "Type 2",
        },
        Object {
          "id": 9,
          "name": "Type 3",
        },
      ]
    }
    required={true}
    value={null}
  />
  <Button
    as="button"
    buttonRef={[Function]}
    cursor="pointer"
    disabled={true}
    fluidWidth={false}
    margin="0"
    onClick={[Function]}
    size="medium"
    type="button"
    variant="default"
  >
    Submit
  </Button>
</div>
`;

exports[`EquipmentCreatePage enables model select if OEM ID is set 1`] = `
<div>
  <Heading
    border="none"
    color="inherit"
    ellipsis={false}
    level="h1"
    margin="medium"
  >
    Add Equipment
  </Heading>
  <FormTextInput
    identifier="serialNumber"
    label="Serial Number"
    onChange={[Function]}
    required={true}
    value=""
  />
  <FormSelect
    defaultOptionLabel="Select an OEM"
    disabled={false}
    identifier="oemId"
    label="OEM"
    onChange={[Function]}
    options={
      Array [
        Object {
          "id": 1,
          "name": "OEM 1",
        },
        Object {
          "id": 2,
          "name": "OEM 2",
        },
        Object {
          "id": 3,
          "name": "OEM 3",
        },
      ]
    }
    required={true}
    value={1}
  />
  <FormSelect
    defaultOptionLabel="Select a Model"
    disabled={false}
    identifier="modelId"
    label="Model"
    onChange={[Function]}
    options={
      Array [
        Object {
          "id": 4,
          "name": "Model 1",
          "oemId": 1,
        },
      ]
    }
    required={true}
    value={null}
  />
  <FormSelect
    defaultOptionLabel="Select a Type"
    disabled={false}
    identifier="typeId"
    label="Type"
    onChange={[Function]}
    options={
      Array [
        Object {
          "id": 7,
          "name": "Type 1",
        },
        Object {
          "id": 8,
          "name": "Type 2",
        },
        Object {
          "id": 9,
          "name": "Type 3",
        },
      ]
    }
    required={true}
    value={null}
  />
  <Button
    as="button"
    buttonRef={[Function]}
    cursor="pointer"
    disabled={true}
    fluidWidth={false}
    margin="0"
    onClick={[Function]}
    size="medium"
    type="button"
    variant="default"
  >
    Submit
  </Button>
</div>
`;

exports[`EquipmentCreatePage enables submit if fields are valid 1`] = `
<div>
  <Heading
    border="none"
    color="inherit"
    ellipsis={false}
    level="h1"
    margin="medium"
  >
    Add Equipment
  </Heading>
  <FormTextInput
    identifier="serialNumber"
    label="Serial Number"
    onChange={[Function]}
    required={true}
    value="Equipment 1"
  />
  <FormSelect
    defaultOptionLabel="Select an OEM"
    disabled={false}
    identifier="oemId"
    label="OEM"
    onChange={[Function]}
    options={
      Array [
        Object {
          "id": 1,
          "name": "OEM 1",
        },
        Object {
          "id": 2,
          "name": "OEM 2",
        },
        Object {
          "id": 3,
          "name": "OEM 3",
        },
      ]
    }
    required={true}
    value={1}
  />
  <FormSelect
    defaultOptionLabel="Select a Model"
    disabled={false}
    identifier="modelId"
    label="Model"
    onChange={[Function]}
    options={
      Array [
        Object {
          "id": 4,
          "name": "Model 1",
          "oemId": 1,
        },
      ]
    }
    required={true}
    value={4}
  />
  <FormSelect
    defaultOptionLabel="Select a Type"
    disabled={false}
    identifier="typeId"
    label="Type"
    onChange={[Function]}
    options={
      Array [
        Object {
          "id": 7,
          "name": "Type 1",
        },
        Object {
          "id": 8,
          "name": "Type 2",
        },
        Object {
          "id": 9,
          "name": "Type 3",
        },
      ]
    }
    required={true}
    value={7}
  />
  <Button
    as="button"
    buttonRef={[Function]}
    cursor="pointer"
    disabled={false}
    fluidWidth={false}
    margin="0"
    onClick={[Function]}
    size="medium"
    type="button"
    variant="default"
  >
    Submit
  </Button>
</div>
`;

exports[`EquipmentCreatePage renders an error if load fails 1`] = `
<Alert
  liveRegionPoliteness="assertive"
  margin="x-small 0"
  open={true}
  screenReaderOnly={false}
  timeout={0}
  transition="fade"
  variant="error"
>
  some error
</Alert>
`;

exports[`EquipmentCreatePage renders form if load succeeds 1`] = `
<div>
  <Heading
    border="none"
    color="inherit"
    ellipsis={false}
    level="h1"
    margin="medium"
  >
    Add Equipment
  </Heading>
  <FormTextInput
    identifier="serialNumber"
    label="Serial Number"
    onChange={[Function]}
    required={true}
    value=""
  />
  <FormSelect
    defaultOptionLabel="Select an OEM"
    disabled={false}
    identifier="oemId"
    label="OEM"
    onChange={[Function]}
    options={
      Array [
        Object {
          "id": 1,
          "name": "OEM 1",
        },
        Object {
          "id": 2,
          "name": "OEM 2",
        },
        Object {
          "id": 3,
          "name": "OEM 3",
        },
      ]
    }
    required={true}
    value={null}
  />
  <FormSelect
    defaultOptionLabel="Select a Model"
    disabled={true}
    identifier="modelId"
    label="Model"
    onChange={[Function]}
    options={Array []}
    required={true}
    value={null}
  />
  <FormSelect
    defaultOptionLabel="Select a Type"
    disabled={false}
    identifier="typeId"
    label="Type"
    onChange={[Function]}
    options={
      Array [
        Object {
          "id": 7,
          "name": "Type 1",
        },
        Object {
          "id": 8,
          "name": "Type 2",
        },
        Object {
          "id": 9,
          "name": "Type 3",
        },
      ]
    }
    required={true}
    value={null}
  />
  <Button
    as="button"
    buttonRef={[Function]}
    cursor="pointer"
    disabled={true}
    fluidWidth={false}
    margin="0"
    onClick={[Function]}
    size="medium"
    type="button"
    variant="default"
  >
    Submit
  </Button>
</div>
`;

exports[`EquipmentCreatePage renders spinner if not yet loaded 1`] = `
<Spinner
  as="div"
  renderTitle="Loading"
  size="large"
  variant="default"
/>
`;
